fix(): radio buttons alignment

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 
   textarea {
     width: 100%;
-    height: 25vh;
+    field-sizing: content;
   }
 }
 
@@ -187,6 +187,12 @@ input[type='radio'].question-radio:checked:after {
   display: flex;
   column-gap: 1em;
   padding: 0 0 0 5px;
+  align-items: center;
+
+  .question-radio {
+    display: flex;
+    align-items: center;
+  }
 }
 
 label.correct-choice {
